deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-front
spec:
  rules:
    - host: blue.ankr.com.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blue-dashboard-svc
                port:
                  number: 80


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-backend
  annotations:
    blue.gatewayorg.io/strip_prefix: '/api'
spec:
  rules:
    - host: blue.ankr.com.cn
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: blue-dashboard-svc
                port:
                  number: 8081
